# VNN

./: README.md  license.txt
demos/Android/: readme.md
demos/Android/vnn_android_demo/: build.gradle  settings.gradle
demos/Android/vnn_android_demo/app/: build.gradle
demos/Android/vnn_android_demo/vnnlib/: CMakeLists.txt  build.gradle
demos/Android/vnn_android_demo/vnnlib/src/androidTest/java/com/duowan/vnnlib/: ExampleInstrumentedTest.java
demos/Android/vnn_android_demo/vnnlib/src/main/: AndroidManifest.xml
demos/Android/vnn_android_demo/vnnlib/src/main/cpp/: vnnjni.cpp
demos/Android/vnn_android_demo/vnnlib/src/main/java/com/duowan/vnnlib/: VNN.java
demos/Android/vnn_android_demo/vnnlib/src/test/java/com/duowan/vnnlib/: ExampleUnitTest.java
demos/Linux/: readme.md
demos/Linux/vnn_linux_demo/: CMakeLists.txt
demos/Linux/vnn_linux_demo/demo/inc/: cvui.h  vnn_helper.h
demos/Linux/vnn_linux_demo/demo/src/: vnn_helper.cpp
demos/Linux/vnn_linux_demo/demo/src/apps/: main.cpp
demos/MacOS/: readme.md
demos/MacOS/vnn_macos_demo/osx/: AppDelegate.h  AppDelegate.m  Info.plist  Main.storyboard  ViewController.h  ViewController.mm  main.m
demos/MacOS/vnn_macos_demo/vnndemo.xcodeproj/: project.pbxproj
demos/Windows/: readme.md
demos/Windows/vnn_win_demo/: CMakeLists.txt  build_vnn_demo_2019.bat  utils.cmake
demos/Windows/vnn_win_demo/demo/inc/: vnn_helper.h
demos/Windows/vnn_win_demo/demo/src/: vnn_helper.cpp
demos/Windows/vnn_win_demo/demo/src/apps/: main.cpp
demos/iOS/: readme.md
demos/iOS/vnn_ios_demo/ios/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  main.m
demos/iOS/vnn_ios_demo/vnndemo.xcodeproj/: project.pbxproj
doc/: 3d_game_face_stylizing.md  cartoonstylizing.md  cartoonstylizing_comicstylizing.md  comicstylizing.md  disney_face_stylizing.md  doc_index.md  document_rectifying.md  face_count.md  face_landmark_detection.md  face_reenactment.md  face_segmentation.md  general_classification.md  general_segmentation.md  gesture_detection.md  head_segmentation.md  how_to_use_vnn_image.md  object_tracking.md  person_attribute_recognition.md  pose_detection.md  qr_code_detection.md  question_and_answer.md  status_code.md  vnn_data_structure.md  vnn_kit_fun.md
libs/Windows/lib/x64/: vnn_classifying.lib  vnn_core.lib  vnn_face.lib  vnn_face_reenactment.lib  vnn_faceparser.lib  vnn_general.lib  vnn_gesture.lib  vnn_kit.lib  vnn_objcount.lib  vnn_objtracking.lib  vnn_pose.lib  vnn_stylizing.lib
libs/Windows/lib/x86/: vnn_classifying.lib  vnn_core.lib  vnn_face.lib  vnn_face_reenactment.lib  vnn_faceparser.lib  vnn_general.lib  vnn_gesture.lib  vnn_kit.lib  vnn_objcount.lib  vnn_objtracking.lib  vnn_pose.lib  vnn_stylizing.lib
libs/headers/: vnn_classifying.h  vnn_docrect.h  vnn_face_reenactment.h  vnn_faceparser.h  vnn_general.h  vnn_gesture.h  vnn_objcount.h  vnn_objtracking.h  vnn_pose.h  vnn_stylizing.h
libs/iOS/arm64/vnn_classifying_ios.framework/: Info.plist  vnn_classifying_ios
libs/iOS/arm64/vnn_docrect_ios.framework/: vnn_docrect_ios
libs/iOS/arm64/vnn_face_ios.framework/: Info.plist  vnn_face_ios
libs/iOS/arm64/vnn_face_reenactment_ios.framework/: vnn_face_reenactment_ios
libs/iOS/arm64/vnn_faceparser_ios.framework/: Info.plist  vnn_faceparser_ios
libs/iOS/arm64/vnn_general_ios.framework/: vnn_general_ios
libs/iOS/arm64/vnn_gesture_ios.framework/: vnn_gesture_ios
libs/iOS/arm64/vnn_kit_ios.framework/: vnn_kit_ios
libs/iOS/arm64/vnn_objcount_ios.framework/: vnn_objcount_ios
libs/iOS/arm64/vnn_objtracking_ios.framework/: Info.plist  vnn_objtracking_ios
libs/iOS/arm64/vnn_pose_ios.framework/: vnn_pose_ios
libs/iOS/arm64/vnn_stylizing_ios.framework/: Info.plist  vnn_stylizing_ios
libs/iOS/armv7/vnn_classifying_ios.framework/: Info.plist  vnn_classifying_ios
libs/iOS/armv7/vnn_core_ios.framework/: vnn_core_ios
libs/iOS/armv7/vnn_docrect_ios.framework/: Info.plist  vnn_docrect_ios
libs/iOS/armv7/vnn_face_ios.framework/: vnn_face_ios
libs/iOS/armv7/vnn_face_reenactment_ios.framework/: Info.plist  vnn_face_reenactment_ios
libs/iOS/armv7/vnn_faceparser_ios.framework/: vnn_faceparser_ios
libs/iOS/armv7/vnn_general_ios.framework/: vnn_general_ios
libs/iOS/armv7/vnn_gesture_ios.framework/: Info.plist  vnn_gesture_ios
libs/iOS/armv7/vnn_kit_ios.framework/: vnn_kit_ios
libs/iOS/armv7/vnn_objcount_ios.framework/: vnn_objcount_ios
libs/iOS/armv7/vnn_objtracking_ios.framework/: vnn_objtracking_ios
libs/iOS/armv7/vnn_pose_ios.framework/: vnn_pose_ios
libs/iOS/armv7/vnn_stylizing_ios.framework/: vnn_stylizing_ios
models/vnn_3dgame_data/: face_3dgame[1.0.0].vnnmodel
models/vnn_animalseg_data/: animal_segment[1.0.0]_process_config.json
models/vnn_cartoon_data/: stylize_cartoon[1.0.0].vnnmodel  stylize_cartoon[1.0.0]_proceess_config.json
models/vnn_classification_data/: object_classification[1.0.0]_label.json  person_attribute[1.0.0]_label.json  scene_weather[1.0.0]_label.json
models/vnn_clothesseg_data/: clothes_segment[1.0.0].vnnmodel  clothes_segment[1.0.0]_process_config.json
models/vnn_comic_data/: stylize_comic[1.0.0].vnnmodel  stylize_comic[1.0.0]_proceess_config.json
models/vnn_disney_data/: face_disney[1.0.0].vnnmodel
models/vnn_docrect_data/: document_rectification[1.0.0].vnnmodel
models/vnn_face_count_data/: face_count[1.0.0].vnnmodel
models/vnn_face_mask_data/: face_mask[1.0.0].vnnmodel
models/vnn_face_reenactment_data/: driving.kps.json
models/vnn_gesture_data/: gesture[1.0.0].vnnmodel
models/vnn_hairseg_data/: hair_segment[1.0.0].vnnmodel  hair_segment[1.0.0]_process_config.json
models/vnn_headseg_data/: head_segment[1.0.0].vnnmodel  head_segment[1.0.0]_process_config.json
models/vnn_portraitseg_data/: seg_portrait_video[1.0.0].vnnmodel  seg_portrait_video[1.0.0]_process_config.json
models/vnn_pose_data/: pose_landmarks[1.0.0].vnnmodel
models/vnn_qrcode_detection_data/: qrcode_detection[1.0.0].vnnmodel
models/vnn_skyseg_data/: sky_segment[1.0.0].vnnmodel  sky_segment[1.0.0]_process_config.json
(+251 files in other folders)
